Decompose events